--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 # pyproject.toml
+
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
